--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
 body {
   min-height: 100vh;
+  min-height: 100dvh;
   background-color: #1c1c1e;
 }
 
